# pycode

./: .envrc  .gitignore  BUILD.bazel  LICENSE  WORKSPACE.bazel  gazelle_python.yaml
py/: BUILD.bazel
py/examples/: BUILD.bazel
py/examples/hello_more_tests/: BUILD.bazel  __main__.py  test_greeter.py
py/examples/hello_test_rules/: BUILD.bazel  __main__.py  greeter.py  greeter_test.py  test_greeter.py
py/examples/hello_tests/: BUILD.bazel  __main__.py  greeter_test.py
py/examples/hello_world/: BUILD.bazel  __main__.py
tools/: bazel
