load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "hello_world",
    srcs = [
        "__init__.py",
        "greeter.py",
    ],
    imports = ["../../.."],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "hello_world_bin",
    srcs = ["__main__.py"],
    imports = ["../../.."],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        ":hello_world",
        "@pypi_absl_py//:pkg",
    ],
)
